--- a/404.md
+++ b/404.md
@@ -2,10 +2,10 @@
 permalink: /404.html
 ---
 
-### **404 Not Found**
+ **404 Not Found**
 
 > [!WARNING]
 > 
-> ***网站被黑洞吞噬了……***
+> **网站被黑洞吞噬了……**
 
 它现在和煮烂的意大利面没有什么区别。
