--- a/404.md
+++ b/404.md
@@ -2,12 +2,12 @@
 permalink: /404.html
 ---
 
-OH NO!
+**OH NO!**
 
 # 404 Not Found
 
-> **Warning**  
-> 
-> **网站被黑洞吞噬了……**
+⚠️⚠️⚠️
+
+***网站被黑洞吞噬了……***
 
 它现在和煮烂的意大利面没有什么区别。
